# cli_tools

./: .gitignore  Makefile  README.md  install-macos.sh  test_all.sh
.github/workflows/: tests.yml
.scripts/: build_all.sh  lint_all.sh
imgconvert/: .gitignore  Cargo.toml  Makefile  README.md
imgconvert/src/: lib.rs  main.rs
imgcrop/: .gitignore  Cargo.toml  README.md
imgcrop/src/: lib.rs  main.rs
pypaste/: .gitignore  Cargo.toml  Makefile  README.md
pypaste/src/: clipboard.rs  formatter.rs  lib.rs  main.rs
raw_http/: .gitignore  Makefile  README.md  example.txt
raw_http/include/: rh_cli.h  rh_client.h  rh_config.h  rh_headers.h  rh_output.h  rh_parse.h  rh_response.h  rh_types.h
raw_http/src/: main.c  rh_cli.c  rh_client.c  rh_headers.c  rh_output.c  rh_parse.c  rh_response.c
raw_http/tests/: test_cli_output.c  test_parse.c
raw_http/tests/fixtures/: request_post.txt
salary_calculator/: Makefile  README.md  salary_calculator.c
salary_calculator/include/: sc_api.h  sc_config.h  sc_money.h  sc_quota.h
salary_calculator/src/: main.c  salary_calculator.c  sc_config.c  sc_money.c  sc_parse.c  sc_quota.c
workpay/: .gitignore  Makefile  README.md
workpay/include/: sc_cli.h  sc_config.h  sc_parse.h  sc_report_query.h  sc_report_render.h  sc_report_store.h  sc_report_types.h
workpay/src/: main.c  sc_api.c  sc_cli.c  sc_parse.c  sc_quota.c  sc_report_query.c  sc_report_render.c  sc_report_store.c
workpay/tests/: test_cli.c  test_money.c  test_parse.c  test_quota.c  test_report_export.c  test_report_query.c  test_report_store.c
