[package]
name = "imgconvert"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Convert images to a target format with optional output path"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.9", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "ico", "pnm", "tga", "webp"] }
