[package]
name = "imgcrop"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Crop images to exact dimensions with optional proportion and framing controls"

[dependencies]
image = { version = "0.24.9", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "ico", "pnm", "tga", "webp"] }
